[package]
name = "rust-operator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.77.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.16.0", features = ["v1_25"] }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread", "signal"] }
backoff = "0.4.0"
futures = "0.3.18"
anyhow = "1.0.51"
log = "0.4.14"
tracing = "0.1.29"
thiserror = "1.0.30"
schemars = "0.8.6"
tracing-subscriber = "0.3.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.8.21"